--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
          en la terminal del editor de codigo en la carpeta respectiva de nuestro proyecto <br>
          <b>Git add . :</b> Agrega todos los archivos que fueron modificados al repositorio temporal de Git <br>
          <b>git commit -m "" :</b>  Agrega los archivos modificados al repositorio en los que se le hace una salva, podemos nombrar esta
-         salva en las comillas despues de -m 
+         salva en las comillas despues de -m <br>
+         <b>git log --oneline :</b> Muestra los commits que has hecho, <b>(IDCommit / Comentario)</b> <br>
+         <b>git reset --hard ????? :</b> Permite viajar hacia el commit realizado poniendo su id en el comando <br><br><br>
         </p>
+        <img src="Assets/Sin título.png" class="img-git" >
+        <br><br>
+        <p><b>Lo demas es del repositorio online, para mas informacion dar click <a href="repOnline.html">Aqui</a></b></p>
 
     </div>
     <script src="App/App.js"></script>
