Agregamos estilos y un poco mas de info

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <div class="container">
         <h1 class="titulo">Git Resources</h1>
         <p class="texto-principal">
-         En este sitio se guardaran los principales comandos de Git y se explicaran a detalle para que se usan <br>
+         En este sitio se guardaran los principales comandos de Git y se explicaran a detalle para que se usan: <br><br>
          <b>Git init :</b> Se inicia Git para nuestro proyecto de desarrollo guardado en la carpeta, para esto tenemos que estar ubicados
-         en la terminal del editor de codigo en la carpeta respectiva de nuestro proyecto <br>
-         <b>Git add . :</b> Agrega todos los archivos que fueron modificados al repositorio temporal de Git <br>
+         en la terminal del editor de codigo en la carpeta respectiva de nuestro proyecto <br> <br>
+         <b>Git add . :</b> Agrega todos los archivos que fueron modificados al repositorio temporal de Git <br><br>
          <b>git commit -m "" :</b>  Agrega los archivos modificados al repositorio en los que se le hace una salva, podemos nombrar esta
-         salva en las comillas despues de -m <br>
-         <b>git log --oneline :</b> Muestra los commits que has hecho, <b>(IDCommit / Comentario)</b> <br>
+         salva en las comillas despues de -m <br><br>
+         <b>git log --oneline :</b> Muestra los commits que has hecho, <b>(IDCommit / Comentario)</b> <br><br>
          <b>git reset --hard ????? :</b> Permite viajar hacia el commit realizado poniendo su id en el comando <br><br><br>
+         Si desea saber mas Bluuweb tiene un curso de Git y Git-hub disponible en su canal de youtube, <b>para verlo haz click <a href="https://youtube.com">Aqui</a></b>
         </p>
         <img src="Assets/Sin título.png" class="img-git" >
         <br><br>
